# TheGame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.bat  build.sh
.github/workflows/: main.yaml
assets/maps/: main_game  map1
assets/maps/map1/: layers1  layers2  layers3
map_editor/: Makefile  config.me  main.cpp
map_editor/lib/: Editor.hpp  Toolbox.hpp
src/: main.cpp
src/common/: struct.h
src/entities/: Cone.cpp  Cone.hpp  DariusButton.cpp  DariusButton.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  P_button.cpp  P_button.hpp  Player.cpp  Player.hpp  Text.cpp  Text.hpp  TileSprite.cpp  TileSprite.hpp
src/interfaces/: IEntity.hpp  IMusic.hpp  IRenderer.hpp  ISound.hpp
src/manager/: Core.cpp  Core.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  Menu.cpp  Menu.hpp  MusicManager.cpp  MusicManager.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SoundManager.cpp  SoundManager.hpp
src/map/: Map.cpp  Map.hpp  TileMap.cpp  TileMap.hpp
src/music/: MyMusic.cpp  MyMusic.hpp
src/renderer/: Renderer.cpp  Renderer.hpp  Sfml.cpp  Sfml.hpp
src/scenes/: DariusDark.cpp  DariusDark.hpp  DariusLight.cpp  DariusLight.hpp  Game.cpp  Game.hpp  GameOver.cpp  GameOver.hpp  Menu.cpp  Menu.hpp  Scene.cpp  Scene.hpp
src/sound/: MySound.cpp  MySound.hpp  Sound.cpp  Sound.hpp
src/utils/: Clock.cpp  Clock.hpp  transform.cpp  transform.h
